<resources>
    <string name="app_name">QuizAppTSU</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently_played">Recently Played</string>
    <string name="science">Science</string>
    <string name="popular_topics">Popular Topics</string>
    <string name="cosmos">Cosmos</string>
    <string name="chemistry">Chemistry</string>
    <string name="right_answers">Right Answers: %d</string>

    <!-- Geography Questions -->
    <string name="geography_question_one">What is the longest river in Europe?</string>
    <string name="next">Next</string>
    <string name="answers_counter">Answers Counter: %d</string>
    <string name="enter_question">Enter Question</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="add_question">Add Question</string>
    <string name="enter_right_answer">Enter Right Answer</string>
    <string name="last_quiz">Last Quiz:</string>
    <string name="coins_title">Coins:</string>

    <!-- Geography Answers -->
    <string-array name="q_one_answers">
        <item>Volga</item>
        <item>Danube</item>
        <item>Loire</item>
        <item>Rhine</item>
    </string-array>

</resources>
