<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.QAHomeFragment">

    <LinearLayout
        android:id="@+id/home_recently"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/qa_avenir_black"
            android:text="@string/recently_played"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home_recent_first"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:background="@drawable/bg_circle_btn"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_science"
                    android:tint="#4BF70B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/qa_avenir_black"
                    android:text="@string/science"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_recent_second"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/home_recent_third"
                app:layout_constraintStart_toEndOf="@id/home_recent_first">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:background="@drawable/bg_circle_btn"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_cosmos"
                    android:tint="#E067D2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/qa_avenir_black"
                    android:text="@string/cosmos"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_recent_third"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageButton
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:background="@drawable/bg_circle_btn"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_chemistry"
                    android:tint="#0DC7FF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/qa_avenir_black"
                    android:text="@string/chemistry"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_popular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_recently">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/qa_avenir_black"
            android:text="@string/popular_topics"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_primary_cornered"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>