<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/play_quiz_view">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/qa_avenir_black"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_profile_bordered"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_chat"
            android:paddingStart="5dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_quiz_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_primary_cornered"
        android:orientation="vertical"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/main_top">

        <TextView
            android:id="@+id/play_quiz_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/qa_avenir_black"
            android:gravity="end"
            android:text="@string/right_answers"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/play_quiz_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/qa_avenir_black"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:text="First Quiz" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_buttons_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/play_quiz_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_quiz_answer_one"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/qa_avenir_black"
                android:gravity="start"
                tools:text="1." />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_quiz_answer_two"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/qa_avenir_black"
                android:gravity="start"
                tools:text="2." />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_quiz_answer_three"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/qa_avenir_black"
                android:gravity="start"
                tools:text="3." />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/play_quiz_answer_four"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/qa_avenir_black"
                android:gravity="start"
                tools:text="4." />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_next_btn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/qa_avenir_black"
        android:text="@string/next"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_buttons_view" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/main_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorPrimary"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="5dp"
            android:gravity="center"
            app:contentInsetStart="0dp"
            app:layout_anchorGravity="start"
            app:fabCradleRoundedCornerRadius="0dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/main_nav_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelVisibilityMode="unlabeled"
                app:itemIconTint="#FFFFFF"
                app:elevation="0dp"
                android:background="@android:color/transparent"
                app:menu="@menu/main_bottom_bar_menu"
                app:backgroundTint="@android:color/transparent"/>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/main_bottom_bar"
            app:maxImageSize="40dp"
            app:tint="#FFFFFF" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>